          for the threshold value used for the removal,
          \item new argument \code{MARGIN} added to allow the application of the methods along
          the wavelength or the time,
          \item set default method to \code{smooth}.


      }


      \item \code{calc_FadingCorr()}
      \itemize{

        \item Table column headers now have all capital letters,
        \item minor performance improvements.

      }

     \item \code{calc_OSLLxTxRatio()}
      \itemize{

        \item New argument \code{digits} introduced to allow direct rounding of the numbers,
        \item add argument \code{sig0} to allow for an extra component of error.
      }

      \item \code{fit_LMCurve()}
       \itemize{

          \item Fix bug that caused a function break if data set contained 0 time values but a
          log-scale was wanted; now the \code{xlim} is adjusted and a warning is given.



     }

         \item \code{merge_RLum.Data.Curve()}
      \itemize{

        \item Support further merge operations: \code{median}, \code{var}, \code{sd}, \code{min}, \code{max}.
      }


      \item \code{plot_AbanicoPlot()}
      \itemize{

        \item Fixed a bug where the function failed to get input data from
        \code{RLum.Results} objects.
        \item New argument \code{interactive} to produce an interactive plot
        using the JavaScript graphing library 'plotly.js' (requires the
        'plotly' package).

      }

     \item \code{plot_DRTResults()}
       \itemize{

       \item If no given dose is provided the horizontal 'ab-lines' (1.0 and +/- 0.1) are no
       longer plotted,
       \item default value for the argument \code{given.dose} is now \code{NULL}.

    }

    \item \code{plot_GrowthCurve()}
      \itemize{

        \item If the input data contain a least one infinite value the function will not crash
        any longer, but return \code{NULL} (#263, Norbert Mercier),